--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+* {
+  border: 2px solid red;
+}
+
 /* #root {
   max-width: 1280px;
   margin: 0 auto;
