--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import "tailwindcss";
+
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
@@ -39,7 +41,7 @@ body {
 
 .skills-track {
   display: flex;
-  animation: scroll-marquee 20s linear infinite;
+  animation: scroll-marquee 50s linear infinite;
 }
 
 .icon {
